The effect of writing-mode property remains after the property is removed (on the root element) https://bugs.webkit.org/show_bug.cgi?id=185729 rdar://97091990

Reviewed by Alan Baradlay.

There is a style cycle where the root writing-mode may depend on the document element writing-mode which
in turn may depend on the body's (computed during previous style update). These can then get inherited back
to the body style. The resulting confusion causes various issues.

This patch ensures we do style resolution using clean root styles without writing-mode/direction mutations.
The propagation upwards is done at the end of the resolution. This replaces the old propagation code in
render tree.

* LayoutTests/TestExpectations:
* LayoutTests/fast/writing-mode/writing-mode-body-expected.html: Added.
* LayoutTests/fast/writing-mode/writing-mode-body.html: Added.
* LayoutTests/fast/writing-mode/writing-mode-document-element-expected.html: Added.
* LayoutTests/fast/writing-mode/writing-mode-document-element.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/wm-propagation-body-computed-root-expected.txt:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::resolveStyle):
* Source/WebCore/dom/Document.h:
(WebCore::Document::rootStyle const):

Maintain clean root style.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::styleDidChange):

Remove style mutating propagation code.

* Source/WebCore/rendering/RenderView.cpp:

Handle view invalidation for writing-mode/direction. This is moved from RenderBox::styleDidChange.

(WebCore::RenderView::styleDidChange):
* Source/WebCore/rendering/RenderView.h:
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::commit):

Update the view style first.

(WebCore::RenderTreeUpdater::updateRenderViewStyle):
* Source/WebCore/rendering/updating/RenderTreeUpdater.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::propagateToDocumentElementAndInitialContainingBlock):

Do the propagation at end of the style resolution.

(WebCore::Style::Adjuster::restoreUsedDocumentElementStyleToComputed):
* Source/WebCore/style/StyleAdjuster.h:
* Source/WebCore/style/StyleResolveForDocument.cpp:
(WebCore::Style::resolveForDocument):

Remove the adjustments based on descendant styles. This was not correct as these values are from the previous round of style resolution.

* Source/WebCore/style/StyleResolver.cpp:
(WebCore::Style::Resolver::State::State):
(WebCore::Style::Resolver::Resolver):
(WebCore::Style::Resolver::styleForPage):
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::Parent::Parent):
(WebCore::Style::TreeResolver::resolveElement):
(WebCore::Style::TreeResolver::resolveComposedTree):

Save and clean up document element style when traversing through.

(WebCore::Style::TreeResolver::resolve):
* Source/WebCore/style/StyleUpdate.h:
(WebCore::Style::Update::initialContainingBlockUpdate const):
(WebCore::Style::Update::addInitialContainingBlockUpdate):

Pass the new root style via style update.

Canonical link: https://commits.webkit.org/256353@main